# symbolic

./: .gitattributes  CMakeLists.txt  conanfile.py
examples/: CMakeLists.txt  algebra.cpp  angle_sums.cpp  greek.cpp  rotations.cpp
symbolic/: CMakeLists.txt  angle_sums.cpp  angle_sums.h  expression.cpp  expression.h  greek.cpp  greek.h  matrix.cpp  matrix.h  named.cpp  named.h  operator.cpp  operator.h  rank.h  settings.cpp  settings.h  symbol.cpp  symbol.h  symbolic.h  value.cpp  value.h
